Update TabbarVC - 탭바 높이 조정 완료

--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Base.lproj/MainTab.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Base.lproj/MainTab.storyboard
@@ -11,7 +11,7 @@
             <objects>
                 <tabBarController restorationIdentifier="TabbarVC" storyboardIdentifier="TabbarVC" automaticallyAdjustsScrollViewInsets="NO" id="fB6-hD-4QB" customClass="TabbarVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y2x-Ec-4Bp" customClass="TabbarView" customModule="TutorDot_iOS" customModuleProvider="target">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="y2x-Ec-4Bp">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
