--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/MyPage.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/MyPage.storyboard
@@ -37,9 +37,8 @@
                                     <constraint firstAttribute="height" constant="94" id="zCq-gI-5pj"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cwz-IV-G7Y">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cwz-IV-G7Y">
                                 <rect key="frame" x="0.0" y="94" width="375" height="718"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <view key="tableHeaderView" contentMode="scaleToFill" id="Wz3-2N-p0a">
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
@@ -354,7 +353,11 @@
                         <constraints>
                             <constraint firstItem="2ld-gX-pa1" firstAttribute="trailing" secondItem="Z8Q-t2-KWk" secondAttribute="trailing" id="1iV-O3-bXN"/>
                             <constraint firstItem="2ld-gX-pa1" firstAttribute="top" secondItem="EDA-lx-fQE" secondAttribute="top" id="Bck-8o-CdJ"/>
+                            <constraint firstItem="cwz-IV-G7Y" firstAttribute="trailing" secondItem="Z8Q-t2-KWk" secondAttribute="trailing" id="Cca-vH-BCv"/>
                             <constraint firstItem="2ld-gX-pa1" firstAttribute="leading" secondItem="Z8Q-t2-KWk" secondAttribute="leading" id="FLu-8O-9vD"/>
+                            <constraint firstAttribute="bottom" secondItem="cwz-IV-G7Y" secondAttribute="bottom" id="Keh-Ku-ALs"/>
+                            <constraint firstItem="cwz-IV-G7Y" firstAttribute="leading" secondItem="Z8Q-t2-KWk" secondAttribute="leading" id="tuv-Up-Bfg"/>
+                            <constraint firstItem="cwz-IV-G7Y" firstAttribute="top" secondItem="2ld-gX-pa1" secondAttribute="bottom" id="vdX-rg-Waz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Z8Q-t2-KWk"/>
                     </view>
