--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Splash.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Splash.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="uDS-7G-7Jc">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -13,26 +13,31 @@
             <objects>
                 <viewController storyboardIdentifier="SplashVC" id="uDS-7G-7Jc" customClass="SplashVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Gy3-S5-8Pa">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="qFL-A9-wKT">
-                                <rect key="frame" x="0.0" y="184" width="375" height="375"/>
+                                <rect key="frame" x="0.0" y="150" width="375" height="375"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="qFL-A9-wKT" secondAttribute="height" multiplier="1:1" id="dkE-ji-Mau"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="튜터링 관리의 마침표, 튜터닷" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cPY-jn-MnR">
-                                <rect key="frame" x="87.666666666666686" y="419" width="200" height="20"/>
+                                <rect key="frame" x="87.5" y="385" width="200" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="2pG-lI-uIa"/>
+                                    <constraint firstAttribute="height" constant="20" id="SP7-ig-dOv"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="Color"/>
+                        <color key="backgroundColor" name="SwitchColor"/>
                         <constraints>
-                            <constraint firstItem="qFL-A9-wKT" firstAttribute="top" secondItem="Gy3-S5-8Pa" secondAttribute="top" constant="184" id="1GT-RA-ehs"/>
-                            <constraint firstItem="cPY-jn-MnR" firstAttribute="top" secondItem="Gy3-S5-8Pa" secondAttribute="top" constant="419" id="7jI-J6-IIC"/>
+                            <constraint firstItem="cPY-jn-MnR" firstAttribute="bottom" secondItem="qFL-A9-wKT" secondAttribute="bottom" constant="-120" id="7xC-k8-Zsf"/>
+                            <constraint firstItem="cPY-jn-MnR" firstAttribute="top" secondItem="qFL-A9-wKT" secondAttribute="top" constant="235" id="EnR-rZ-9Fi"/>
+                            <constraint firstItem="qFL-A9-wKT" firstAttribute="top" secondItem="g0K-dW-Efc" secondAttribute="top" constant="150" id="LBU-hl-3UN"/>
                             <constraint firstItem="qFL-A9-wKT" firstAttribute="leading" secondItem="g0K-dW-Efc" secondAttribute="leading" id="Tld-rJ-DBM"/>
                             <constraint firstItem="cPY-jn-MnR" firstAttribute="centerX" secondItem="g0K-dW-Efc" secondAttribute="centerX" id="cLC-1N-hUI"/>
                             <constraint firstAttribute="trailing" secondItem="qFL-A9-wKT" secondAttribute="trailing" id="ngJ-4N-UdD"/>
@@ -49,17 +54,14 @@
             <objects>
                 <viewController storyboardIdentifier="OnboardingVC" id="oac-Ow-HCN" customClass="OnboardingVC" customModule="TutorDot_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ukb-Yo-4FA">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3nr-BM-mco">
-                                <rect key="frame" x="0.0" y="44" width="375" height="568"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="568" id="5zV-8b-Y7v"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="44" width="375" height="423"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="dIi-iD-wRl">
-                                <rect key="frame" x="159" y="626" width="57" height="9"/>
+                                <rect key="frame" x="159" y="481" width="57" height="9"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboardingBtnUnpick" translatesAutoresizingMaskIntoConstraints="NO" id="0Ei-Fi-ObJ">
                                         <rect key="frame" x="0.0" y="0.0" width="9" height="9"/>
@@ -80,7 +82,7 @@
                                 </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hcw-L7-qUw">
-                                <rect key="frame" x="36" y="660" width="303" height="48"/>
+                                <rect key="frame" x="36" y="515" width="303" height="48"/>
                                 <color key="backgroundColor" name="Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="iIq-PV-3j2"/>
@@ -89,12 +91,15 @@
                                 <state key="normal" title="시작하기">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="startButtonDidTap:" destination="oac-Ow-HCN" eventType="touchUpInside" id="WIJ-R9-cq2"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="OCk-Fw-fjS">
-                                <rect key="frame" x="95" y="713" width="185" height="47"/>
+                                <rect key="frame" x="95" y="568" width="185" height="47"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이미 회원이신가요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hb-91-eUn" userLabel="이미 회원이신가요?">
-                                        <rect key="frame" x="0.0" y="0.0" width="130.66666666666666" height="47"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130.5" height="47"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -113,7 +118,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FSQ-Cc-4DX">
-                                <rect key="frame" x="37.666666666666657" y="134.66666666666666" width="300" height="18"/>
+                                <rect key="frame" x="37.5" y="134.5" width="300" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="300" id="Hki-G5-CKk"/>
                                 </constraints>
@@ -122,16 +127,16 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" translatesAutoresizingMaskIntoConstraints="NO" id="11H-rw-upU">
-                                <rect key="frame" x="37.666666666666657" y="95" width="300" height="27.666666666666671"/>
+                                <rect key="frame" x="37.5" y="95" width="300" height="27.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label " textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lYp-59-YZr">
-                                        <rect key="frame" x="0.0" y="0.0" width="152.66666666666666" height="27.666666666666668"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="153" height="27.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1JY-Xy-zR0">
-                                        <rect key="frame" x="152.66666666666669" y="0.0" width="147.33333333333331" height="27.666666666666668"/>
+                                        <rect key="frame" x="153" y="0.0" width="147" height="27.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="23"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -148,6 +153,7 @@
                             <constraint firstItem="3nr-BM-mco" firstAttribute="leading" secondItem="RVE-s6-Ir5" secondAttribute="leading" id="3qL-tr-mTq"/>
                             <constraint firstItem="dIi-iD-wRl" firstAttribute="top" secondItem="3nr-BM-mco" secondAttribute="bottom" constant="95" id="9y6-Po-eQ5"/>
                             <constraint firstItem="Hcw-L7-qUw" firstAttribute="top" secondItem="dIi-iD-wRl" secondAttribute="bottom" constant="25" id="AhH-Dj-W8R"/>
+                            <constraint firstAttribute="bottom" secondItem="OCk-Fw-fjS" secondAttribute="bottom" constant="52" id="Hn3-mr-F1I"/>
                             <constraint firstItem="dIi-iD-wRl" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="IFp-Km-8Qw"/>
                             <constraint firstItem="11H-rw-upU" firstAttribute="top" secondItem="Ukb-Yo-4FA" secondAttribute="top" constant="95" id="Oeb-gT-wOA"/>
                             <constraint firstItem="dIi-iD-wRl" firstAttribute="top" secondItem="3nr-BM-mco" secondAttribute="bottom" constant="14" id="QD3-Ki-cwS"/>
@@ -185,6 +191,9 @@
         <image name="onboardingBtnUnpick" width="9" height="9"/>
         <namedColor name="Color">
             <color red="0.40784313725490196" green="0.45882352941176469" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="SwitchColor">
+            <color red="0.92941176470588238" green="0.93725490196078431" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
