--- a/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Splash.storyboard
+++ b/TutorDot_iOS_1/TutorDot_iOS/Resource/Storyboards/Splash.storyboard
@@ -17,12 +17,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="qFL-A9-wKT">
-                                <rect key="frame" x="0.0" y="184" width="375" height="375"/>
+                                <rect key="frame" x="0.0" y="184" width="375" height="454"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="튜터링 관리의 마침표, 튜터닷" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cPY-jn-MnR">
-                                <rect key="frame" x="87.666666666666686" y="419" width="200" height="20"/>
+                                <rect key="frame" x="87.666666666666686" y="438" width="200" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="2pG-lI-uIa"/>
+                                    <constraint firstAttribute="height" constant="20" id="UhY-RH-atX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,10 +33,12 @@
                         <color key="backgroundColor" name="Color"/>
                         <constraints>
                             <constraint firstItem="qFL-A9-wKT" firstAttribute="top" secondItem="Gy3-S5-8Pa" secondAttribute="top" constant="184" id="1GT-RA-ehs"/>
-                            <constraint firstItem="cPY-jn-MnR" firstAttribute="top" secondItem="Gy3-S5-8Pa" secondAttribute="top" constant="419" id="7jI-J6-IIC"/>
+                            <constraint firstItem="qFL-A9-wKT" firstAttribute="centerY" secondItem="g0K-dW-Efc" secondAttribute="centerY" id="EgT-nq-8jO"/>
                             <constraint firstItem="qFL-A9-wKT" firstAttribute="leading" secondItem="g0K-dW-Efc" secondAttribute="leading" id="Tld-rJ-DBM"/>
                             <constraint firstItem="cPY-jn-MnR" firstAttribute="centerX" secondItem="g0K-dW-Efc" secondAttribute="centerX" id="cLC-1N-hUI"/>
                             <constraint firstAttribute="trailing" secondItem="qFL-A9-wKT" secondAttribute="trailing" id="ngJ-4N-UdD"/>
+                            <constraint firstItem="qFL-A9-wKT" firstAttribute="centerX" secondItem="g0K-dW-Efc" secondAttribute="centerX" id="qNg-Oc-53h"/>
+                            <constraint firstItem="cPY-jn-MnR" firstAttribute="top" secondItem="qFL-A9-wKT" secondAttribute="bottom" constant="-200" id="qbw-lK-eJJ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="g0K-dW-Efc"/>
                     </view>
@@ -53,13 +56,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3nr-BM-mco">
-                                <rect key="frame" x="0.0" y="44" width="375" height="568"/>
+                                <rect key="frame" x="0.0" y="164" width="375" height="350"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="568" id="5zV-8b-Y7v"/>
+                                    <constraint firstAttribute="height" constant="350" id="cjJ-gK-ows"/>
                                 </constraints>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="dIi-iD-wRl">
-                                <rect key="frame" x="159" y="626" width="57" height="9"/>
+                                <rect key="frame" x="159" y="528" width="57" height="9"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboardingBtnUnpick" translatesAutoresizingMaskIntoConstraints="NO" id="0Ei-Fi-ObJ">
                                         <rect key="frame" x="0.0" y="0.0" width="9" height="9"/>
@@ -74,13 +77,9 @@
                                         <rect key="frame" x="48" y="0.0" width="9" height="9"/>
                                     </imageView>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="57" id="IEU-Qt-OXk"/>
-                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="S0j-Tq-oc3"/>
-                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hcw-L7-qUw">
-                                <rect key="frame" x="36" y="660" width="303" height="48"/>
+                                <rect key="frame" x="36" y="562" width="303" height="48"/>
                                 <color key="backgroundColor" name="Color"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="iIq-PV-3j2"/>
@@ -89,26 +88,31 @@
                                 <state key="normal" title="시작하기">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="startButtonSelected:" destination="oac-Ow-HCN" eventType="touchUpInside" id="UGB-aZ-6Y2"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="OCk-Fw-fjS">
-                                <rect key="frame" x="95" y="713" width="185" height="47"/>
+                                <rect key="frame" x="95" y="615" width="185" height="128"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이미 회원이신가요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0hb-91-eUn" userLabel="이미 회원이신가요?">
-                                        <rect key="frame" x="0.0" y="0.0" width="130.66666666666666" height="47"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="130.66666666666666" height="128"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n6u-Ee-L67">
-                                        <rect key="frame" x="146" y="0.0" width="39" height="47"/>
+                                        <rect key="frame" x="146" y="0.0" width="39" height="128"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                         <state key="normal" title="로그인">
                                             <color key="titleColor" name="Color"/>
                                         </state>
+                                        <connections>
+                                            <action selector="loginButtonSelected:" destination="oac-Ow-HCN" eventType="touchUpInside" id="i7o-zO-BHy"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="47" id="enY-rj-NeY"/>
                                     <constraint firstAttribute="width" constant="185" id="qV3-4b-OSR"/>
                                 </constraints>
                             </stackView>
@@ -145,20 +149,21 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="11H-rw-upU" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="0pl-yf-TjK"/>
-                            <constraint firstItem="3nr-BM-mco" firstAttribute="leading" secondItem="RVE-s6-Ir5" secondAttribute="leading" id="3qL-tr-mTq"/>
-                            <constraint firstItem="dIi-iD-wRl" firstAttribute="top" secondItem="3nr-BM-mco" secondAttribute="bottom" constant="95" id="9y6-Po-eQ5"/>
-                            <constraint firstItem="Hcw-L7-qUw" firstAttribute="top" secondItem="dIi-iD-wRl" secondAttribute="bottom" constant="25" id="AhH-Dj-W8R"/>
-                            <constraint firstItem="dIi-iD-wRl" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="IFp-Km-8Qw"/>
+                            <constraint firstItem="OCk-Fw-fjS" firstAttribute="top" secondItem="Hcw-L7-qUw" secondAttribute="bottom" constant="5" id="Cdm-7O-eqv"/>
+                            <constraint firstItem="dIi-iD-wRl" firstAttribute="top" secondItem="3nr-BM-mco" secondAttribute="bottom" constant="14" id="Dmk-dC-OQk"/>
+                            <constraint firstItem="RVE-s6-Ir5" firstAttribute="trailing" secondItem="Hcw-L7-qUw" secondAttribute="trailing" constant="36" id="Mpo-Af-8aV"/>
+                            <constraint firstItem="3nr-BM-mco" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="O3w-lz-24Y"/>
                             <constraint firstItem="11H-rw-upU" firstAttribute="top" secondItem="Ukb-Yo-4FA" secondAttribute="top" constant="95" id="Oeb-gT-wOA"/>
-                            <constraint firstItem="dIi-iD-wRl" firstAttribute="top" secondItem="3nr-BM-mco" secondAttribute="bottom" constant="14" id="QD3-Ki-cwS"/>
-                            <constraint firstItem="RVE-s6-Ir5" firstAttribute="trailing" secondItem="Hcw-L7-qUw" secondAttribute="trailing" constant="36" id="RlY-ce-all"/>
-                            <constraint firstItem="3nr-BM-mco" firstAttribute="top" secondItem="Ukb-Yo-4FA" secondAttribute="top" constant="44" id="aeu-gl-aOV"/>
-                            <constraint firstAttribute="trailing" secondItem="3nr-BM-mco" secondAttribute="trailing" id="biQ-MM-sFE"/>
+                            <constraint firstItem="3nr-BM-mco" firstAttribute="top" secondItem="RVE-s6-Ir5" secondAttribute="top" constant="120" id="PUQ-QG-VDF"/>
                             <constraint firstItem="OCk-Fw-fjS" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="ffs-ga-3wL"/>
-                            <constraint firstItem="OCk-Fw-fjS" firstAttribute="top" secondItem="Hcw-L7-qUw" secondAttribute="bottom" constant="5" id="pM1-ur-WB6"/>
+                            <constraint firstItem="RVE-s6-Ir5" firstAttribute="bottom" secondItem="OCk-Fw-fjS" secondAttribute="bottom" constant="35" id="j0K-6z-sma"/>
+                            <constraint firstItem="3nr-BM-mco" firstAttribute="leading" secondItem="RVE-s6-Ir5" secondAttribute="leading" id="jJ1-fk-0XC"/>
                             <constraint firstItem="FSQ-Cc-4DX" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="pbx-rb-ich"/>
                             <constraint firstItem="Hcw-L7-qUw" firstAttribute="leading" secondItem="RVE-s6-Ir5" secondAttribute="leading" constant="36" id="qlH-9D-a2U"/>
                             <constraint firstItem="FSQ-Cc-4DX" firstAttribute="top" secondItem="11H-rw-upU" secondAttribute="bottom" constant="12" id="sOL-S1-r4L"/>
+                            <constraint firstItem="Hcw-L7-qUw" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="vAG-NI-FQx"/>
+                            <constraint firstItem="Hcw-L7-qUw" firstAttribute="top" secondItem="dIi-iD-wRl" secondAttribute="bottom" constant="25" id="wV1-Vx-5nS"/>
+                            <constraint firstItem="dIi-iD-wRl" firstAttribute="centerX" secondItem="RVE-s6-Ir5" secondAttribute="centerX" id="weD-fB-lXO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="RVE-s6-Ir5"/>
                     </view>
